# mogmod-discord

./: Cargo.toml  example  model.txt  readme.md
src/: backend.rs  main.rs
